--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "express-validator": "^6.14.2",
         "hbs": "^4.2.0",
         "jsonwebtoken": "^8.5.1",
-        "nodemailer": "^6.8.0"
+        "nodemailer": "^6.8.0",
+        "web-push": "^3.5.0"
     },
     "devDependencies": {
         "dotenv": "^16.0.2",
