--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express-validator": "^6.14.2",
         "hbs": "^4.2.0",
         "jsonwebtoken": "^8.5.1",
+        "mqtt": "^4.3.7",
         "nodemailer": "^6.8.0",
         "web-push": "^3.5.0"
     },
