--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "hbs": "^4.2.0",
         "jsonwebtoken": "^8.5.1",
         "mqtt": "^4.3.7",
+        "node-cron": "^3.0.2",
         "nodemailer": "^6.8.0",
+        "socket.io": "^4.6.1",
         "web-push": "^3.5.0"
     },
     "devDependencies": {
