--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "db:generate": "yarn prisma generate",
         "db:studio": "yarn prisma studio",
         "db:reset": "yarn prisma migrate reset",
+        "db:create": "node prisma/create.js",
         "db:seed": "yarn prisma db seed"
     }
 }
