--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
         "seed": "node prisma/seed.js"
     },
     "scripts": {
-        "dev": "nodemon app.js",
-        "start": "node app.js",
+        "dev": "nodemon medicine.js",
+        "start": "node medicine.js",
         "db:init": "yarn prisma init",
         "db:migrate": "yarn prisma migrate dev",
         "db:deploy": "yarn prisma migrate deploy",
