--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "express-validator": "^6.14.2",
         "hbs": "^4.2.0",
         "jsonwebtoken": "^8.5.1",
+        "moment": "^2.29.4",
+        "moment-timezone": "^0.5.43",
         "mqtt": "^4.3.7",
         "node-cron": "^3.0.2",
         "nodemailer": "^6.8.0",
